--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Configurations
-title:            Jekyll Gitbook
-longtitle:        Jekyll Gitbook
-author:           HE Tao
-email:            sighingnow@gmail.com
+title:            Div Khandelwal  
+longtitle:        Div Khandelwal's Thoughtspace
+author:           Div Khandelwal  
+email:            Kdivyam@gmail.com
 description: >
   Build Jekyll site with the GitBook style.
 
